# sphinxcli

./: .gitignore  .pre-commit-config.yaml  ReadMe.md  pyproject.toml
.github/workflows/: sphinxcli-test.yaml
src/docs/: Makefile  conf.py
src/docs/source/: conf.py  index.rst
src/docs/source/examples/: sphinx.toml  sphinxcli-pyproject.toml
src/sphinxcli/: __main__.py  build.py  check.py  clean.py  config.py  defaults.py  dirs.py  exec.py  findfile.py  help.py  logging.py  myst-extensions.toml  parse.py  pyproject.py  repl.py  sphinx-extensions.toml  sphinx-themes.toml  sphinxconf.py  toml.py  tool_config.py  types.py  use.py  util.py
src/test/: test_tomlkit.py
tests/: test_tomlkit.py
