[tool.poetry]
name = "sphinxcli"
version = "0.1.0"
description = ""
authors = ["Simon Kennedy <sffjunkie+code@gmail.com>"]
readme = "ReadMe.md"
packages = [
    { include = "sphinxcli", from = "src" },
    { include = "sphinxcli/py.typed", from = "src" },
]

[tool.isort]
profile = "black"
lines_between_sections = 1

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.scripts]
sphinxcli = 'sphinxcli.__main__:cli'

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
click-repl = "^0.2.0"
rich = "^12.5.1"
xdg = "^5.1.1"
Sphinx = "^5.1.1"
furo = "^2022.9.15"
tomlkit = "^0.11.4"
rich-click = "^1.5.2"
typing-extensions = "^4.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
myst-parser = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.sphinxcli]
builders = ["html"]
config = "src/docs/source"
source = "src/docs/source"
target = "docs"
doctree = "src/docs/build/doctree"
languages = ["en"]
